[Guru] Added API's - Upload image and Remove image

--- a/FundooNotes/appsettings.json
+++ b/FundooNotes/appsettings.json
@@ -17,5 +17,11 @@
     "Issuer": "https://localhost:44396/"
   },
 
+  "Cloudinary": {
+    "CloudName": "guruprasad489",
+    "ApiKey": "495828661761912",
+    "ApiSecret": "WhoWnj9p7haOK6-X_DRuJVRTvJE"
+  },
+
   "AllowedHosts": "*"
 }
