--- a/CommonLayer/CommonLayer.csproj
+++ b/CommonLayer/CommonLayer.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Experimental.System.Messaging" Version="1.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.0" />
   </ItemGroup>
 
 </Project>
